<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginBottom="16dp"
    android:layout_marginLeft="16dp"
    tools:context="edu.montclair.mobilecomputing.r_soltes.schwifty.ProfilePage">

    <LinearLayout
        android:id="@+id/hp_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/hp_username_tv"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            android:text="@string/profile_tv"/>

        <LinearLayout
            android:layout_below="@+id/hp_username_tv"
            android:id="@+id/su_layout_or"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp">

            <View
                android:layout_width="200dp"
                android:layout_height="1dp"
                android:background="#c4c8c9"
                android:layout_margin="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/profile_tv_2"/>

            <View
                android:layout_width="200dp"
                android:layout_height="1dp"
                android:background="#c4c8c9"
                android:layout_margin="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/prof_username"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/prof_username"
                android:padding="20dp"/>

            <TextView
                android:id="@+id/prof_email"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/prof_email"
                android:padding="20dp"/>

            <TextView
                android:id="@+id/prof_userID"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/prof_userID"
                android:padding="20dp"/>

            <TextView
                android:id="@+id/prof_userRole"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/prof_userRole"
                android:padding="20dp"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
