<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_create_shift"
    tools:context=".AddShiftPage">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/cb_logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/schwiftylogolong"
        android:layout_width="200dp"
        android:layout_height="100dp"
        />
    <TextView
        android:id="@+id/manager_panel_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_shift_txt"
        android:textColor="@color/colorPrimary"
        android:textSize="35dp"
        android:padding="10dp"
        android:layout_alignParentTop="true"
        android:gravity="center"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/cb_bnID_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nID_CS"
            android:hint="@string/nID_CS"
            android:inputType="number"
            android:layout_marginTop="82dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/cb_bName_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bId_CS"
            android:hint="@string/bID_CS"
            android:layout_marginTop="82dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/cb_UID_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/uid_CS"
            android:hint="@string/uid_CS"
            android:layout_marginTop="82dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/cb_input_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        style="@style/Widget.AppCompat.Button.Colored"
        android:background="#4286f4"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/in_date"
        android:hint="@string/date_tv"
        android:inputType="date"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout

        android:id="@+id/cb_start_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        style="@style/Widget.AppCompat.Button.Colored"
        android:background="#4286f4"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/in_time"
        android:hint="@string/s_time_btn"
        android:layout_gravity="center"
        android:inputType="time"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/in_date"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout

        android:id="@+id/cb_end_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        style="@style/Widget.AppCompat.Button.Colored"
        android:background="#4286f4"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/end_time"
        android:inputType="time"
        android:hint="@string/e_time_btn"
        android:layout_below="@+id/in_time"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:padding="5dp"
        android:orientation="vertical">
<Space
    android:layout_width="match_parent"
    android:layout_height="30dp" />
        <Button
            android:id="@+id/create_shift_btn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:background="#4286f4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/create_shift_btn" />
    </LinearLayout>


</LinearLayout>
</ScrollView>
</RelativeLayout>
